CI: set PYTHONPATH + package init

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      PYTHONPATH: .   # make 'app' importable everywhere
+      PYTHONPATH: ${{ github.workspace }}  # ensure 'app' is importable everywhere
 
     steps:
       - name: Check out code
